--- a/css/styles.css
+++ b/css/styles.css
@@ -14,8 +14,8 @@
         color: var(--primary-text-color);
     }
     
-    .link {
-        list-style-type: none;
+    .list {
+        list-style: none;
     }
     /* logo */
     
@@ -23,7 +23,7 @@
         font-family: Raleway;
         font-weight: 700;
         font-size: 26px;
-        line-height: 1.2;
+        line-height: 1.19;
         letter-spacing: 0.03em;
         text-decoration: none;
         color: #000000;
@@ -34,50 +34,46 @@
     }
     /* header */
     
-    .navigation-menu .list {
+    .navigation-link {
         font-family: 'Roboto';
         font-weight: 500;
         font-size: 14px;
-        line-height: 1.1;
+        line-height: 1.14;
         letter-spacing: 0.02em;
         color: var(--primary-text-color);
         text-decoration: none;
     }
     
-    .navigation-menu .list.current {
-        font-family: 'Roboto';
-        font-weight: 500;
-        font-size: 14px;
-        line-height: 1.1;
-        letter-spacing: 0.02em;
+    .current {
         color: var(--accent-color);
     }
     
-    .navigation-menu :hover,
-    .navigation-menu :focus {
+    .navigation-link:hover,
+    .navigation-link:focus {
         color: var(--accent-color);
     }
     
-    .contact-list .top-list {
+    .top-list {
         font-family: 'Roboto';
         font-weight: 500;
         font-size: 14px;
-        line-height: 1.1;
+        line-height: 1.14;
         letter-spacing: 0.02em;
         color: var(--paragraph-text-color);
         text-decoration: none;
     }
-    /* .contact-list :hover,
-    .contact-list :focus {
+    
+    .top-list:hover,
+    .top-list:focus {
         color: var(--accent-color);
-    } */
+    }
     /* index */
     /* hero */
     
     .hero-title {
         font-weight: 900;
         font-size: 44px;
-        line-height: 1.3;
+        line-height: 1.36;
         text-align: center;
         letter-spacing: 0.06em;
         text-transform: uppercase;
@@ -89,7 +85,7 @@
         font-family: Roboto;
         font-weight: 700;
         font-size: 16px;
-        line-height: 1.8;
+        line-height: 1.87;
         color: var(--main-white-color);
         text-align: center;
         letter-spacing: 0.06em;
@@ -110,14 +106,14 @@
     .features-title {
         font-weight: 700;
         font-size: 14px;
-        line-height: 1.1;
+        line-height: 1.14;
         letter-spacing: 0.03em;
         text-transform: uppercase;
     }
     
     .features-text {
         font-size: 14px;
-        line-height: 1.7;
+        line-height: 1.71;
         letter-spacing: 0.03em;
         color: var(--paragraph-text-color);
     }
@@ -126,7 +122,7 @@
     .projects-title {
         font-weight: 700;
         font-size: 36px;
-        line-height: 1.1;
+        line-height: 1.16;
         text-align: center;
         letter-spacing: 0.03em;
     }
@@ -135,7 +131,7 @@
     .team-title {
         font-weight: 700;
         font-size: 36px;
-        line-height: 1.1;
+        line-height: 1.16;
         text-align: center;
         letter-spacing: 0.03em;
     }
@@ -143,14 +139,14 @@
     .team-member {
         font-weight: 500;
         font-size: 16px;
-        line-height: 1.2;
+        line-height: 1.18;
         text-align: center;
         letter-spacing: 0.03em;
     }
     
     .team-position {
         font-size: 16px;
-        line-height: 1.2;
+        line-height: 1.18;
         text-align: center;
         letter-spacing: 0.03em;
         color: var(--paragraph-text-color);
@@ -162,7 +158,7 @@
         font-weight: 500;
         font-size: 16px;
         background-color: var(--main-white-color);
-        line-height: 1.6;
+        line-height: 1.62;
         color: var(--primary-text-color);
         text-align: center;
         letter-spacing: 0.03em;
@@ -186,7 +182,7 @@
     
     .examples-text {
         font-size: 16px;
-        line-height: 1.8;
+        line-height: 1.87;
         letter-spacing: 0.03em;
         color: var(--paragraph-text-color);
     }
@@ -200,7 +196,7 @@
         font-family: Raleway;
         font-weight: 700;
         font-size: 26px;
-        line-height: 1.2;
+        line-height: 1.19;
         letter-spacing: 0.03em;
         text-decoration: none;
         color: var(--main-white-color)
@@ -209,7 +205,7 @@
     .add-list {
         font-style: normal;
         font-size: 14px;
-        line-height: 1.7;
+        line-height: 1.71;
         letter-spacing: 0.03em;
     }
     
@@ -218,12 +214,17 @@
         text-decoration: none;
     }
     
+    .bottom-street:hover,
+    .bottom-street:focus {
+        color: var(--accent-color);
+    }
+    
     .list-bottom {
         color: var(--paragraph-text-color);
         text-decoration: none;
     }
     
-    .add-list :hover,
-    .add-list :focus {
+    .list-bottom:hover,
+    .list-bottom:focus {
         color: var(--accent-color);
     }
